--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-07  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimp.sgml
+	* libgimpbase/tmpl/gimpprotocol.sgml: updated.
+
 2003-11-06  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt
