2003-11-07  Sven Neumann  <sven@gimp.org>
	* app/app-docs.sgml
	* libgimp/libgimp-docs.sgml
	* libgimpbase/libgimpbase-docs.sgml
	* libgimpcolor/libgimpcolor-docs.sgml
	* libgimpmath/libgimpmath-docs.sgml
	* libgimpwidgets/libgimpwidgets-docs.sgml: specify encoding.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11319 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,12 @@
+2003-11-07  Sven Neumann  <sven@gimp.org>
+
+	* app/app-docs.sgml
+	* libgimp/libgimp-docs.sgml
+	* libgimpbase/libgimpbase-docs.sgml
+	* libgimpcolor/libgimpcolor-docs.sgml
+	* libgimpmath/libgimpmath-docs.sgml
+	* libgimpwidgets/libgimpwidgets-docs.sgml: specify encoding.
+
 2003-11-07  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt
