2003-11-07  Danilo Å egan  <dsegan@gmx.net>
	* po-libgimp/sr.po, po-libgimp/sr@Latn.po: Updated Serbian
          translation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11321 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-07  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2003-11-06  Hasbullah Bin Pit <sebol@ikhlas.com>
                                                                                 
         * ms.po: Updated  Malay translation by
